feat: create footer

--- a/reservations/templates/reservations/layout.html
+++ b/reservations/templates/reservations/layout.html
@@ -31,4 +31,80 @@
         {% block body %}
         {% endblock %}
     </body>
+        <footer class="bg-light text-center text-lg-start">
+            <div class="container p-4">
+                <div class="container">
+                    <div class="row justify-content-lg-between justify-content-center">
+                        <div class="col-6 col-md-5">
+                            <p>
+                                Example paragraph. All the social links are currently disabled and point back to the homepage:
+                            </p>
+                            <section class="mb-3 text-white">
+                                <a
+                                    class="btn btn-primary btn-floating m-1"
+                                    style="background-color: #3b5998;"
+                                    href=""
+                                    role="button"
+                                    ><i class="fab fa-facebook-f"></i>
+                                </a>
+                                <a
+                                    class="btn btn-primary btn-floating m-1"
+                                    style="background-color: #55acee;"
+                                    href=""
+                                    role="button"
+                                    ><i class="fab fa-twitter"></i
+                                ></a>
+                                <a
+                                    class="btn btn-primary btn-floating m-1"
+                                    style="background-color: #ac2bac;"
+                                    href="#!"
+                                    role="button"
+                                    ><i class="fab fa-instagram"></i
+                                ></a>
+                                <a
+                                    class="btn btn-primary btn-floating m-1"
+                                    style="background-color: #dd4b39;"
+                                    href="#!"
+                                    role="button"
+                                    ><i class="fab fa-google"></i
+                                ></a>
+                                <a
+                                    class="btn btn-primary btn-floating m-1"
+                                    style="background-color: #00AF87;"
+                                    href="#!"
+                                    role="button"
+                                    ><i class="fab fa-tripadvisor"></i
+                                ></a>
+                            </section>
+                            <div>
+                                <p class="mb-1">Example Hotel © 2021 No rights reserved.</p>
+                                <p>Hotel Web Design by <a href="https://lbalzanti.dev">Luj Balzanti.</a></p>
+                            </div>
+                        </div>
+                        <div class="col-6 col-md-5">
+                            <div class="mb-4"> 
+                                <i class="icon fas fa-2x fa-map-marker-alt"></i> ADDRESS<br> 
+                                Example Street #, City, Country.
+                            </div>
+                            <div class="mb-4">
+                                <i class="icon fas fa-2x fa-phone fa-flip-horizontal"></i> TELEPHONE<br>
+                                <ul class="list-unstyled">
+                                    <li>
+                                        <a href="tel:+44 7777 777 777">+44 7777 777 777</a>
+                                    </li>
+                                </ul>
+                            </div>
+                            <div> 
+                                <i class="icon fas fa-2x fa-envelope"></i> EMAIL<br>
+                                <ul class="list-unstyled">
+                                    <li>
+                                        <a href="mailto:example@email.com">example@email.com</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </footer>
 </html>
