--- a/reservations/templates/reservations/homeHeader.html
+++ b/reservations/templates/reservations/homeHeader.html
@@ -42,7 +42,7 @@
     <div class="carousel-inner">
       <!-- Single item -->
       <div class="carousel-item active">
-        <div class="mask" style="background-color: rgba(0, 0, 0, 0.4);">
+        <div class="mask carousel-mask">
           <div class="d-flex justify-content-center align-items-center h-100">
             <div class="text-white text-center">
               <h1 class="mb-3">Top Class Resorts</h1>
@@ -62,7 +62,7 @@
 
       <!-- Single item -->
       <div class="carousel-item">
-        <div class="mask" style="background-color: rgba(0, 0, 0, 0.4);">
+        <div class="mask carousel-mask">
           <div class="d-flex justify-content-center align-items-center h-100">
             <div class="text-white text-center">
               <h1 class="mb-3">Luxury Rooms</h1>
@@ -82,7 +82,7 @@
 
       <!-- Single item -->
       <div class="carousel-item">
-          <div class="mask" style="background-color: rgba(0, 0, 0, 0.4);">
+          <div class="mask carousel-mask">
               <div class="d-flex justify-content-center align-items-center h-100">
                 <div class="text-white text-center">
                   <h1 class="mb-3">Amazing Service</h1>
