fix: removed migrations and dependancies for unused apps. Restored settings. Changed room model

--- a/reservations/templates/reservations/home.html
+++ b/reservations/templates/reservations/home.html
@@ -89,7 +89,7 @@
                 <div class="card">
                   <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
                     <img
-                      src="{{ room3Img.picture }}"
+                      src="{{ room1Img.picture.url }}"
                       class="img-fluid"
                     />
                     <a href="#!">
