--- a/reservations/static/reservations/styles.css
+++ b/reservations/static/reservations/styles.css
@@ -58,3 +58,14 @@ color: #000 !important;
     align-self: center;
     margin-bottom: 20px;
 }
+
+body{ 
+    height:100vh; 
+    margin:0; 
+    display:flex; 
+    flex-direction:column; 
+}
+  
+footer{
+    margin-top:auto; 
+}
