--- a/reservations/templates/reservations/header.html
+++ b/reservations/templates/reservations/header.html
@@ -4,10 +4,10 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark d-lg-block" style="z-index: 2000;">
     <div class="container-fluid">
-      <a class="navbar-brand nav-link" target="" href="">
+      <a class="navbar-brand nav-link" target="home" href="{% url 'home' %}">
         <strong>Hotel Reservations</strong>
       </a>
-      <button type="button" class="btn btn-dark ms-auto me-2">Book now</button>
+      <a href="{% url 'booking' %}" class="btn btn-dark ms-auto me-2">Book now</a>
       <button class="navbar-toggler btn btn-dark" type="button" data-mdb-toggle="collapse" data-mdb-target="#navbar"
         aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
         <i class="fas fa-bars"></i>
@@ -15,10 +15,10 @@
       <div class="collapse navbar-collapse" id="navbar">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           <li class="nav-item ms-auto">
-            <a class="nav-link" href="">Placeholder</a>
+            <a class="nav-link" href="{% url 'rooms' %}">Rooms & Suites</a>
           </li>
           <li class="nav-item ms-auto">
-            <a class="nav-link" href="">Placeholder</a>
+            <a class="nav-link" href="{% url 'contact' %}">Contact Us</a>
           </li>
         </ul>
       </div>
