--- a/reservations/templates/reservations/home.html
+++ b/reservations/templates/reservations/home.html
@@ -11,7 +11,7 @@
               <div class="col-md-6 gx-5 mb-4">
                 <div class="bg-image hover-overlay ripple shadow-2-strong" data-mdb-ripple-color="light">
                   <img src="{% static 'reservations/home5.jpg' %}" class="img-fluid" />
-                  <a href="">
+                  <a href="{% url 'contact' %}">
                     <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
                   </a>
                 </div>
