--- a/reservations/templates/reservations/layout.html
+++ b/reservations/templates/reservations/layout.html
@@ -57,21 +57,21 @@
                                 <a
                                     class="btn btn-primary btn-floating m-1"
                                     style="background-color: #ac2bac;"
-                                    href="#!"
+                                    href=""
                                     role="button"
                                     ><i class="fab fa-instagram"></i
                                 ></a>
                                 <a
                                     class="btn btn-primary btn-floating m-1"
                                     style="background-color: #dd4b39;"
-                                    href="#!"
+                                    href=""
                                     role="button"
                                     ><i class="fab fa-google"></i
                                 ></a>
                                 <a
                                     class="btn btn-primary btn-floating m-1"
                                     style="background-color: #00AF87;"
-                                    href="#!"
+                                    href=""
                                     role="button"
                                     ><i class="fab fa-tripadvisor"></i
                                 ></a>
