--- a/reservations/static/reservations/styles.css
+++ b/reservations/static/reservations/styles.css
@@ -50,7 +50,10 @@
 }
 
 .navbar .nav-link {
-color: #000 !important;
+    color: #000;
+}
+.navbar .nav-item .nav-link{
+    color: #000;
 }
 
 .homepage-card-button{
