--- a/reservations/templates/reservations/header.html
+++ b/reservations/templates/reservations/header.html
@@ -2,12 +2,12 @@
 
 {% block header %}
 
-<nav class="navbar navbar-expand-lg navbar-dark d-lg-block" style="z-index: 2000;">
+<nav class="navbar navbar-expand-lg navbar-light" style="z-index: 2000;">
     <div class="container-fluid">
       <a class="navbar-brand nav-link" target="home" href="{% url 'home' %}">
         <strong>Hotel Reservations</strong>
       </a>
-      <a href="{% url 'booking' %}" class="btn btn-dark ms-auto me-2">Book now</a>
+      <a href="{% url 'booking' %}" class="btn btn-primary ms-auto me-2">Book now</a>
       <button class="navbar-toggler btn btn-dark" type="button" data-mdb-toggle="collapse" data-mdb-target="#navbar"
         aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
         <i class="fas fa-bars"></i>
