--- a/reservations/templates/reservations/home.html
+++ b/reservations/templates/reservations/home.html
@@ -59,7 +59,7 @@
                       The perfect summer getaway that will stay with you forever
                     </p>
                   </div>
-                  <a href="{% url 'room' id=room1.id %}" class="btn btn-primary homepage-card-button">Book this room</a>
+                  <a href="{% url 'room' id=room1.id %}" class="btn btn-outline-primary homepage-card-button">Book this room</a>
                 </div>
               </div>
   
@@ -80,7 +80,7 @@
                       Each space has it's own style. Hand crafted to appeal to you
                     </p>
                   </div>
-                  <a href="{% url 'room' id=room2.id %}" class="btn btn-primary homepage-card-button">Book this room</a>
+                  <a href="{% url 'room' id=room2.id %}" class="btn btn-outline-primary homepage-card-button">Book this room</a>
                 </div>
               </div>
   
@@ -101,7 +101,7 @@
                       Sublime moments spent in front of the sea
                     </p>
                   </div>
-                  <a href="{% url 'room' id=room3.id %}" class="btn btn-primary homepage-card-button">Book this room</a>
+                  <a href="{% url 'room' id=room3.id %}" class="btn btn-outline-primary homepage-card-button">Book this room</a>
                 </div>
               </div>
             </div>
@@ -122,7 +122,7 @@
                 </div>
                 <div class="d-flex justify-content-center">
                   <a
-                    class="btn btn-outline-light btn-lg m-2"
+                    class="btn btn-primary btn-lg m-2"
                     href="booking/"
                     role="button"
                     target="_blank"
