--- a/reservations/templates/reservations/header.html
+++ b/reservations/templates/reservations/header.html
@@ -10,7 +10,7 @@
       <a href="{% url 'booking' %}" class="btn btn-primary ms-auto me-2">Book now</a>
       <button class="navbar-toggler btn btn-dark" type="button" data-mdb-toggle="collapse" data-mdb-target="#navbar"
         aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
-        <i class="fas fa-bars"></i>
+        <i class="fas fa-bars text-light"></i>
       </button>
       <div class="collapse navbar-collapse" id="navbar">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
