--- a/reservations/templates/reservations/layout.html
+++ b/reservations/templates/reservations/layout.html
@@ -31,7 +31,7 @@
         {% block body %}
         {% endblock %}
     </body>
-        <footer class="bg-light text-center text-lg-start">
+        <footer class="bg-footer text-center text-lg-start">
             <div class="container p-4">
                 <div class="container">
                     <div class="row justify-content-lg-between justify-content-center">
