--- a/reservations/templates/reservations/contact.html
+++ b/reservations/templates/reservations/contact.html
@@ -51,22 +51,13 @@
     </section>
     <hr class="my-5" />
     <section class="mb-5">
-        <div class="bg-image homepage-bg-img">
+        <div class="bg-image team-bg-img">
           <div class="mask carousel-mask">
-            <div class="d-flex justify-content-center align-items-center h-50">
+            <div class="d-flex justify-content-center align-items-center h-100">
               <div class="text-center">
-                <h1 class="mb-3 text-white">Example Header</h1>
-                <p class="mb-3 text-white"> A paragraph example bellow the header! </p>
+                <h1 class="mb-3 text-white">A Multidiverse team</h1>
+                <p class="mb-3 text-white"> Making your reservation process as easy as possible </p>
               </div>
-            </div>
-            <div class="d-flex justify-content-center">
-              <a
-                class="btn btn-primary btn-lg m-2"
-                href="booking/"
-                role="button"
-                target="_blank"
-                >Book Now
-              </a>
             </div>
           </div>
         </div>
