--- a/reservations/templates/reservations/contact.html
+++ b/reservations/templates/reservations/contact.html
@@ -55,7 +55,7 @@
           <div class="mask carousel-mask">
             <div class="d-flex justify-content-center align-items-center h-100">
               <div class="text-center">
-                <h1 class="mb-3 text-white">A Multidiverse team</h1>
+                <h1 class="mb-3 text-white">Meet our team</h1>
                 <p class="mb-3 text-white"> Making your reservation process as easy as possible </p>
               </div>
             </div>
