--- a/reservations/templates/reservations/room.html
+++ b/reservations/templates/reservations/room.html
@@ -1,6 +1,39 @@
 {% extends "reservations/header.html" %}
-
+{% load static %}
 {% block body %}
+    {% if justBooked %}
+        <script>
+            function alertUser(msg) {
+            alert(msg);
+            }
+        </script>
+        <body onload="alertUser('You have succesfully booked room {{ room.number }}')">
+        </body>
+    {% endif %}
+
+    <link rel="stylesheet" href="http://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script type="text/javascript">
+        $(document).ready(function() {
+            initDatepicker();
+        });
+
+        function initDatepicker(){
+            var disabledDates = [];
+            {% for date in reservedDates %}
+                disabledDates.push("{{ date }}");
+            {% endfor %}
+            $('.datepicker').datepicker({
+                minDate: 0,
+                beforeShowDay: function(date){
+                    var string = jQuery.datepicker.formatDate('yy-mm-dd', date);
+                    return [$.inArray(string, disabledDates) == -1];
+                }
+            })
+        }
+    </script>
+
     <section class="mb-5 mt-4">
         <div class="container">
             <div class="row">
@@ -23,14 +56,14 @@
                         </div>
                     {% endfor %}        
                 {% else %}
-                    <div class="bg-image placeholder-bg-img">
-                        <div class="mask carousel-mask">   
+                    <div class="bg-image mb-3">
+                            <img src="{% static 'reservations/placeholderRoom.jpg' %}" class="img-fluid rounded"/>   
                         </div>
                     </div>
                 {% endif %}
             </div>
             <div class="d-flex justify-content-center">
-                <form method="POST" action="{% url 'roomBooking' id=room.id %}">
+                <form method="POST" action="{% url 'room' id=room.id %}">
                     {{ guestForm.as_p }}
                     {{ bookingForm.as_p }}
                     {% csrf_token %}
