--- a/reservations/templates/reservations/room.html
+++ b/reservations/templates/reservations/room.html
@@ -67,7 +67,7 @@
                     {{ guestForm.as_p }}
                     {{ bookingForm.as_p }}
                     {% csrf_token %}
-                    <input type="hidden" name="_method" value="postComment">
+                    <input type="hidden">
                     <button type="submit" class="btn btn-primary mb-2">Book This Room</button>        
                 </form>
             </div>
