--- a/reservations/templates/reservations/header.html
+++ b/reservations/templates/reservations/header.html
@@ -4,7 +4,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-light" style="z-index: 2000;">
     <div class="container-fluid">
-      <a class="navbar-brand nav-link" target="home" href="{% url 'home' %}">
+      <a class="navbar-brand nav-link" href="{% url 'home' %}">
         <strong>Hotel Reservations</strong>
       </a>
       <a href="{% url 'booking' %}" class="btn btn-primary ms-auto me-2">Book now</a>
