--- a/reservations/templates/reservations/homeHeader.html
+++ b/reservations/templates/reservations/homeHeader.html
@@ -16,7 +16,7 @@
 
 <nav class="navbar navbar-expand-lg" style="z-index: 2000;">
     <div class="container-fluid">
-      <a class="navbar-brand nav-link" target="home" href="{% url 'home' %}">
+      <a class="navbar-brand nav-link" href="{% url 'home' %}">
         <strong>Hotel Reservations</strong>
       </a>
       <button class="navbar-toggler btn btn-dark" type="button" data-mdb-toggle="collapse" data-mdb-target="#navbar"
